[metadata]
name = mashcima
version = 0.0.1
author = Jiří Mayer
author_email = jirkamayer97@gmail.com
description = Handwritten music image synthesizer for HMR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jirka-Mayer/Mashcima
project_urls =
    Bug Tracker = https://github.com/Jirka-Mayer/Mashcima/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
